df_final concatenado correcto

--- a/notebooks/web_scrapping.ipynb
+++ b/notebooks/web_scrapping.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -163,37 +163,37 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>ibis Madrid Calle Alcalá</td>\n",
+       "      <td>Ibis Budget Madrid Calle Alcalá</td>\n",
+       "      <td>4.3</td>\n",
+       "      <td>95</td>\n",
+       "      <td>2025-02-25</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Ibis Madrid Calle Alcalá</td>\n",
        "      <td>4.5</td>\n",
        "      <td>119</td>\n",
        "      <td>2025-02-25</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6</th>\n",
+       "      <th>7</th>\n",
        "      <td>ibis budget Madrid Vallecas</td>\n",
        "      <td>4.3</td>\n",
        "      <td>107</td>\n",
        "      <td>2025-02-25</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>7</th>\n",
+       "      <th>8</th>\n",
        "      <td>Pullman Madrid Airport &amp; Feria</td>\n",
        "      <td>4.2</td>\n",
        "      <td>129</td>\n",
        "      <td>2025-02-25</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>8</th>\n",
+       "      <th>9</th>\n",
        "      <td>Novotel Madrid Campo de las Naciones</td>\n",
        "      <td>4.5</td>\n",
        "      <td>154</td>\n",
-       "      <td>2025-02-25</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>ibis Madrid Aeropuerto Barajas</td>\n",
-       "      <td>4.4</td>\n",
-       "      <td>116</td>\n",
        "      <td>2025-02-25</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -207,14 +207,14 @@
        "2         ibis Madrid Centro las Ventas     4.5           172    2025-02-25\n",
        "3  ibis budget Madrid Centro las Ventas     4.3           119    2025-02-25\n",
        "4        Novotel Madrid City Las Ventas     4.6           173    2025-02-25\n",
-       "5              ibis Madrid Calle Alcalá     4.5           119    2025-02-25\n",
-       "6           ibis budget Madrid Vallecas     4.3           107    2025-02-25\n",
-       "7        Pullman Madrid Airport & Feria     4.2           129    2025-02-25\n",
-       "8  Novotel Madrid Campo de las Naciones     4.5           154    2025-02-25\n",
-       "9        ibis Madrid Aeropuerto Barajas     4.4           116    2025-02-25"
+       "5       Ibis Budget Madrid Calle Alcalá     4.3            95    2025-02-25\n",
+       "6              Ibis Madrid Calle Alcalá     4.5           119    2025-02-25\n",
+       "7           ibis budget Madrid Vallecas     4.3           107    2025-02-25\n",
+       "8        Pullman Madrid Airport & Feria     4.2           129    2025-02-25\n",
+       "9  Novotel Madrid Campo de las Naciones     4.5           154    2025-02-25"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -253,11 +253,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_pickle(\"../data/web_scrapping/hoteles_competencia.pickle\")"
+    "df.to_pickle(\"../data/web_scrapping/hoteles_competencia_info_scrapping.pickle\")"
    ]
   },
   {
