--- a/notebooks/web_scrapping.ipynb
+++ b/notebooks/web_scrapping.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -131,70 +131,70 @@
        "      <td>Novotel Madrid Center</td>\n",
        "      <td>4.6</td>\n",
        "      <td>255</td>\n",
-       "      <td>2025-02-25</td>\n",
+       "      <td>2025-02-26</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>ibis budget Madrid Calle 30</td>\n",
        "      <td>4.4</td>\n",
        "      <td>110</td>\n",
-       "      <td>2025-02-25</td>\n",
+       "      <td>2025-02-26</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>ibis Madrid Centro las Ventas</td>\n",
-       "      <td>4.5</td>\n",
-       "      <td>172</td>\n",
-       "      <td>2025-02-25</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
        "      <td>ibis budget Madrid Centro las Ventas</td>\n",
        "      <td>4.3</td>\n",
        "      <td>119</td>\n",
-       "      <td>2025-02-25</td>\n",
+       "      <td>2025-02-26</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
+       "      <th>3</th>\n",
        "      <td>Novotel Madrid City Las Ventas</td>\n",
        "      <td>4.6</td>\n",
        "      <td>173</td>\n",
-       "      <td>2025-02-25</td>\n",
+       "      <td>2025-02-26</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>ibis budget Madrid Calle Alcalá</td>\n",
+       "      <td>4.3</td>\n",
+       "      <td>95</td>\n",
+       "      <td>2025-02-26</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>Ibis Budget Madrid Calle Alcalá</td>\n",
-       "      <td>4.3</td>\n",
-       "      <td>95</td>\n",
-       "      <td>2025-02-25</td>\n",
+       "      <td>ibis Madrid Calle Alcalá</td>\n",
+       "      <td>4.5</td>\n",
+       "      <td>119</td>\n",
+       "      <td>2025-02-26</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
-       "      <td>Ibis Madrid Calle Alcalá</td>\n",
-       "      <td>4.5</td>\n",
-       "      <td>119</td>\n",
-       "      <td>2025-02-25</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
        "      <td>ibis budget Madrid Vallecas</td>\n",
        "      <td>4.3</td>\n",
        "      <td>107</td>\n",
-       "      <td>2025-02-25</td>\n",
+       "      <td>2025-02-26</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>8</th>\n",
+       "      <th>7</th>\n",
        "      <td>Pullman Madrid Airport &amp; Feria</td>\n",
        "      <td>4.2</td>\n",
        "      <td>129</td>\n",
-       "      <td>2025-02-25</td>\n",
+       "      <td>2025-02-26</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>9</th>\n",
+       "      <th>8</th>\n",
        "      <td>Novotel Madrid Campo de las Naciones</td>\n",
        "      <td>4.5</td>\n",
        "      <td>154</td>\n",
-       "      <td>2025-02-25</td>\n",
+       "      <td>2025-02-26</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>ibis Madrid Aeropuerto Barajas</td>\n",
+       "      <td>4.4</td>\n",
+       "      <td>116</td>\n",
+       "      <td>2025-02-26</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -202,19 +202,19 @@
       ],
       "text/plain": [
        "                                 nombre  rating  precio_noche fecha_reserva\n",
-       "0                 Novotel Madrid Center     4.6           255    2025-02-25\n",
-       "1           ibis budget Madrid Calle 30     4.4           110    2025-02-25\n",
-       "2         ibis Madrid Centro las Ventas     4.5           172    2025-02-25\n",
-       "3  ibis budget Madrid Centro las Ventas     4.3           119    2025-02-25\n",
-       "4        Novotel Madrid City Las Ventas     4.6           173    2025-02-25\n",
-       "5       Ibis Budget Madrid Calle Alcalá     4.3            95    2025-02-25\n",
-       "6              Ibis Madrid Calle Alcalá     4.5           119    2025-02-25\n",
-       "7           ibis budget Madrid Vallecas     4.3           107    2025-02-25\n",
-       "8        Pullman Madrid Airport & Feria     4.2           129    2025-02-25\n",
-       "9  Novotel Madrid Campo de las Naciones     4.5           154    2025-02-25"
+       "0                 Novotel Madrid Center     4.6           255    2025-02-26\n",
+       "1           ibis budget Madrid Calle 30     4.4           110    2025-02-26\n",
+       "2  ibis budget Madrid Centro las Ventas     4.3           119    2025-02-26\n",
+       "3        Novotel Madrid City Las Ventas     4.6           173    2025-02-26\n",
+       "4       ibis budget Madrid Calle Alcalá     4.3            95    2025-02-26\n",
+       "5              ibis Madrid Calle Alcalá     4.5           119    2025-02-26\n",
+       "6           ibis budget Madrid Vallecas     4.3           107    2025-02-26\n",
+       "7        Pullman Madrid Airport & Feria     4.2           129    2025-02-26\n",
+       "8  Novotel Madrid Campo de las Naciones     4.5           154    2025-02-26\n",
+       "9        ibis Madrid Aeropuerto Barajas     4.4           116    2025-02-26"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -253,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -307,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -318,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -329,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -340,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -350,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -403,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -453,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -473,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -503,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -584,7 +584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
