cambios carga BBDD

--- a/notebooks/BBDD.ipynb
+++ b/notebooks/BBDD.ipynb
@@ -2,34 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: psycopg2 in c:\\users\\victo\\desktop\\data_hackio\\data_analyst\\curso\\2aparte\\proyecto_etl\\etl_hoteles\\venv\\lib\\site-packages (2.9.10)\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "[notice] A new release of pip is available: 24.2 -> 25.0.1\n",
-      "[notice] To update, run: python.exe -m pip install --upgrade pip\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# pip install psycopg2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -379,7 +361,7 @@
        "[15000 rows x 16 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -391,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -429,8 +411,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## TABLA HOTELES"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -560,7 +549,7 @@
        "[15000 rows x 4 columns]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -572,7 +561,109 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 15000 entries, 0 to 14999\n",
+      "Data columns (total 4 columns):\n",
+      " #   Column        Non-Null Count  Dtype  \n",
+      "---  ------        --------------  -----  \n",
+      " 0   nombre_hotel  15000 non-null  object \n",
+      " 1   competencia   15000 non-null  bool   \n",
+      " 2   estrellas     15000 non-null  float64\n",
+      " 3   ciudad        15000 non-null  object \n",
+      "dtypes: bool(1), float64(1), object(2)\n",
+      "memory usage: 366.3+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "  # !!! --> REVISAR TIPOS DE DATOS PARA CARGA EN BBDD <-- !!!\n",
+    "\n",
+    "df_tabla_hoteles.info()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## TABLA CIUDAD"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0        Madrid\n",
+       "1        Madrid\n",
+       "2        Madrid\n",
+       "3        Madrid\n",
+       "4        Madrid\n",
+       "          ...  \n",
+       "14995    Madrid\n",
+       "14996    Madrid\n",
+       "14997    Madrid\n",
+       "14998    Madrid\n",
+       "14999    Madrid\n",
+       "Name: ciudad, Length: 15000, dtype: object"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "  \n",
+    "  # !!! --> REVISAR SI DEBERÍA HABER SOLO 1 <-- !!!\n",
+    "\n",
+    "df_tabla_ciudad = df_hoteles[\"ciudad\"]\n",
+    "df_tabla_ciudad"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.series.Series'>\n",
+      "RangeIndex: 15000 entries, 0 to 14999\n",
+      "Series name: ciudad\n",
+      "Non-Null Count  Dtype \n",
+      "--------------  ----- \n",
+      "15000 non-null  object\n",
+      "dtypes: object(1)\n",
+      "memory usage: 117.3+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_tabla_ciudad.info()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## TABLA EVENTOS"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -813,7 +904,7 @@
        "[229 rows x 10 columns]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -825,7 +916,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -854,6 +945,427 @@
    ],
    "source": [
     "df_eventos.info()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## TABLA CLIENTES"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id_cliente</th>\n",
+       "      <th>nombre</th>\n",
+       "      <th>apellido</th>\n",
+       "      <th>mail</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>9063</td>\n",
+       "      <td>Maite</td>\n",
+       "      <td>Calatayud</td>\n",
+       "      <td>maite.calatayud@example.com</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>13646</td>\n",
+       "      <td>Tecla</td>\n",
+       "      <td>Bonet</td>\n",
+       "      <td>tecla.bonet@example.com</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>993</td>\n",
+       "      <td>Amílcar</td>\n",
+       "      <td>Andrés</td>\n",
+       "      <td>amílcar.andrés@example.com</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>7371</td>\n",
+       "      <td>Joan</td>\n",
+       "      <td>Vazquez</td>\n",
+       "      <td>joan.vazquez@example.com</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2839</td>\n",
+       "      <td>Chelo</td>\n",
+       "      <td>Flor</td>\n",
+       "      <td>chelo.flor@example.com</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14995</th>\n",
+       "      <td>7312</td>\n",
+       "      <td>Jesusa</td>\n",
+       "      <td>Espinosa</td>\n",
+       "      <td>jesusa.espinosa@example.com</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14996</th>\n",
+       "      <td>3479</td>\n",
+       "      <td>Cruz</td>\n",
+       "      <td>Hurtado</td>\n",
+       "      <td>cruz.hurtado@example.com</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14997</th>\n",
+       "      <td>7539</td>\n",
+       "      <td>Jose Francisco</td>\n",
+       "      <td>Cortes</td>\n",
+       "      <td>jose francisco.cortes@example.com</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14998</th>\n",
+       "      <td>13982</td>\n",
+       "      <td>Toño</td>\n",
+       "      <td>Narváez</td>\n",
+       "      <td>toño.narváez@example.com</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14999</th>\n",
+       "      <td>3524</td>\n",
+       "      <td>Custodia</td>\n",
+       "      <td>Marco</td>\n",
+       "      <td>custodia.marco@example.com</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>15000 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       id_cliente          nombre   apellido  \\\n",
+       "0            9063           Maite  Calatayud   \n",
+       "1           13646           Tecla      Bonet   \n",
+       "2             993         Amílcar     Andrés   \n",
+       "3            7371            Joan    Vazquez   \n",
+       "4            2839           Chelo       Flor   \n",
+       "...           ...             ...        ...   \n",
+       "14995        7312          Jesusa   Espinosa   \n",
+       "14996        3479            Cruz    Hurtado   \n",
+       "14997        7539  Jose Francisco     Cortes   \n",
+       "14998       13982            Toño    Narváez   \n",
+       "14999        3524        Custodia      Marco   \n",
+       "\n",
+       "                                    mail  \n",
+       "0            maite.calatayud@example.com  \n",
+       "1                tecla.bonet@example.com  \n",
+       "2             amílcar.andrés@example.com  \n",
+       "3               joan.vazquez@example.com  \n",
+       "4                 chelo.flor@example.com  \n",
+       "...                                  ...  \n",
+       "14995        jesusa.espinosa@example.com  \n",
+       "14996           cruz.hurtado@example.com  \n",
+       "14997  jose francisco.cortes@example.com  \n",
+       "14998           toño.narváez@example.com  \n",
+       "14999         custodia.marco@example.com  \n",
+       "\n",
+       "[15000 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_table_clientes = df_hoteles[[\"id_cliente\", \"nombre\", \"apellido\", \"mail\"]]\n",
+    "df_table_clientes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 15000 entries, 0 to 14999\n",
+      "Data columns (total 4 columns):\n",
+      " #   Column      Non-Null Count  Dtype \n",
+      "---  ------      --------------  ----- \n",
+      " 0   id_cliente  15000 non-null  int64 \n",
+      " 1   nombre      15000 non-null  object\n",
+      " 2   apellido    15000 non-null  object\n",
+      " 3   mail        15000 non-null  object\n",
+      "dtypes: int64(1), object(3)\n",
+      "memory usage: 468.9+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_table_clientes.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 15000 entries, 0 to 14999\n",
+      "Data columns (total 4 columns):\n",
+      " #   Column      Non-Null Count  Dtype \n",
+      "---  ------      --------------  ----- \n",
+      " 0   id_cliente  15000 non-null  int64 \n",
+      " 1   nombre      15000 non-null  object\n",
+      " 2   apellido    15000 non-null  object\n",
+      " 3   mail        15000 non-null  object\n",
+      "dtypes: int64(1), object(3)\n",
+      "memory usage: 468.9+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "    # !!!! --> OJO ID_CLIENTE DEBE SER STRING <-- !!!!\n",
+    "\n",
+    "df_table_clientes.info()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## TABLA RESERVAS"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id_reserva</th>\n",
+       "      <th>fecha_reserva</th>\n",
+       "      <th>inicio_estancia</th>\n",
+       "      <th>final_estancia</th>\n",
+       "      <th>precio_noche</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>40c4cb55-d1f5-407b-832f-4756b8ff77b4</td>\n",
+       "      <td>2025-02-09</td>\n",
+       "      <td>2025-03-01</td>\n",
+       "      <td>2025-03-02</td>\n",
+       "      <td>119.96</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>f2ce8df5-7844-43e1-8c0f-97ce7a208f21</td>\n",
+       "      <td>2025-02-08</td>\n",
+       "      <td>2025-03-01</td>\n",
+       "      <td>2025-03-02</td>\n",
+       "      <td>211.53</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>57d4515a-447d-4067-afcb-9bdcf4e4e915</td>\n",
+       "      <td>2025-02-02</td>\n",
+       "      <td>2025-03-01</td>\n",
+       "      <td>2025-03-02</td>\n",
+       "      <td>378.37</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>ccbd9fe9-5a60-4f6f-bed3-73a7158ecba7</td>\n",
+       "      <td>2025-02-08</td>\n",
+       "      <td>2025-03-01</td>\n",
+       "      <td>2025-03-02</td>\n",
+       "      <td>85.45</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>99c3dc4f-663c-45f7-849a-ac9313f3746a</td>\n",
+       "      <td>2025-02-09</td>\n",
+       "      <td>2025-03-01</td>\n",
+       "      <td>2025-03-02</td>\n",
+       "      <td>309.80</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14995</th>\n",
+       "      <td>e856adee-838c-4031-920c-05ec5f1e32e6</td>\n",
+       "      <td>2025-02-26</td>\n",
+       "      <td>2025-03-01</td>\n",
+       "      <td>2025-03-02</td>\n",
+       "      <td>107.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14996</th>\n",
+       "      <td>77134049-6e4f-49b0-a6f8-93b7466b1c22</td>\n",
+       "      <td>2025-02-26</td>\n",
+       "      <td>2025-03-01</td>\n",
+       "      <td>2025-03-02</td>\n",
+       "      <td>95.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14997</th>\n",
+       "      <td>19aef6f3-3e85-4719-9dff-b768d9bfe5a9</td>\n",
+       "      <td>2025-02-26</td>\n",
+       "      <td>2025-03-01</td>\n",
+       "      <td>2025-03-02</td>\n",
+       "      <td>154.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14998</th>\n",
+       "      <td>aa092c3e-7fe6-4985-a5a8-cacd38554b1b</td>\n",
+       "      <td>2025-02-26</td>\n",
+       "      <td>2025-03-01</td>\n",
+       "      <td>2025-03-02</td>\n",
+       "      <td>119.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14999</th>\n",
+       "      <td>6d1f590c-ae87-4582-bc99-9b8cbf1d8e28</td>\n",
+       "      <td>2025-02-26</td>\n",
+       "      <td>2025-03-01</td>\n",
+       "      <td>2025-03-02</td>\n",
+       "      <td>116.00</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>15000 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                 id_reserva fecha_reserva inicio_estancia  \\\n",
+       "0      40c4cb55-d1f5-407b-832f-4756b8ff77b4    2025-02-09      2025-03-01   \n",
+       "1      f2ce8df5-7844-43e1-8c0f-97ce7a208f21    2025-02-08      2025-03-01   \n",
+       "2      57d4515a-447d-4067-afcb-9bdcf4e4e915    2025-02-02      2025-03-01   \n",
+       "3      ccbd9fe9-5a60-4f6f-bed3-73a7158ecba7    2025-02-08      2025-03-01   \n",
+       "4      99c3dc4f-663c-45f7-849a-ac9313f3746a    2025-02-09      2025-03-01   \n",
+       "...                                     ...           ...             ...   \n",
+       "14995  e856adee-838c-4031-920c-05ec5f1e32e6    2025-02-26      2025-03-01   \n",
+       "14996  77134049-6e4f-49b0-a6f8-93b7466b1c22    2025-02-26      2025-03-01   \n",
+       "14997  19aef6f3-3e85-4719-9dff-b768d9bfe5a9    2025-02-26      2025-03-01   \n",
+       "14998  aa092c3e-7fe6-4985-a5a8-cacd38554b1b    2025-02-26      2025-03-01   \n",
+       "14999  6d1f590c-ae87-4582-bc99-9b8cbf1d8e28    2025-02-26      2025-03-01   \n",
+       "\n",
+       "      final_estancia  precio_noche  \n",
+       "0         2025-03-02        119.96  \n",
+       "1         2025-03-02        211.53  \n",
+       "2         2025-03-02        378.37  \n",
+       "3         2025-03-02         85.45  \n",
+       "4         2025-03-02        309.80  \n",
+       "...              ...           ...  \n",
+       "14995     2025-03-02        107.00  \n",
+       "14996     2025-03-02         95.00  \n",
+       "14997     2025-03-02        154.00  \n",
+       "14998     2025-03-02        119.00  \n",
+       "14999     2025-03-02        116.00  \n",
+       "\n",
+       "[15000 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_table_reservas = df_hoteles[[\"id_reserva\", \"fecha_reserva\", \"inicio_estancia\", \"final_estancia\", \"precio_noche\",]]\n",
+    "df_table_reservas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 15000 entries, 0 to 14999\n",
+      "Data columns (total 5 columns):\n",
+      " #   Column           Non-Null Count  Dtype         \n",
+      "---  ------           --------------  -----         \n",
+      " 0   id_reserva       15000 non-null  object        \n",
+      " 1   fecha_reserva    15000 non-null  datetime64[ns]\n",
+      " 2   inicio_estancia  15000 non-null  datetime64[ns]\n",
+      " 3   final_estancia   15000 non-null  datetime64[ns]\n",
+      " 4   precio_noche     15000 non-null  float64       \n",
+      "dtypes: datetime64[ns](3), float64(1), object(1)\n",
+      "memory usage: 586.1+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_table_reservas.info()"
    ]
   },
   {
